0.1-77
- improve labels for oce.axis.POSIXct()
- add debug=getOption("oce.debug") as an argument some functions
- plot.profile(): add argument ytype; change 'type' to 'xtype'
- add sw.z()
- add oce.smooth()
- add read.adv(), etc., supporting Nortek and Sontek devices
- add read.adp(), etc., supporting Nortek, RDI and Sontek devices
- add oce.plot.ts()
- add imagep()
- add bcd2integer()
- add matlab2POSIXt()
- to most plot functions, add 'mgp' and 'mar' arguments
- plot.pt(): add plim and Tlim arguments
- gravity(): give default for latitude argument
- plot.sealevel(): remove argument focus.time and add argument which
- rename tdr functions as pt, to reflect oral convention
- add geod.xy()
- add argument 'mgp' to all plotting functions
- use abbreviations for axis names if space is tight
- add argument 'adorn' to all plot() functions
- add oce.colors.two(), oce.colors.jet(), and oce.colors.palette()
- rename gebco.colors() as oce.colors.gebco()
- add byte2binary()
- add "lty.grid" to all CTD plotting functions
- add "+.section", a more convenient way to build sections from stations
- rework summary() for all existing objects
- as.sealevel(): rename sampling.interval as deltat

0.1-76
- sw.N2(): make it tolerate NAs; adjust df to make result smoother
- add make.filter()
- add decimate(), which may eventually replace ctd.decimate()
- read.tdr(): handle 5-column data files; add tz argument
- plot.profile(): add types sigma+dpdt and sigma+time
- ctd.trim(): add pmin parameter
- plot.ctd(): add Slim, Tlim, plim, lonlim, latlim arguments; add ability to draw maps
- add coastline.sle dataset
- plot.TS(): fix isopycnal labels for fresh water; add Slim and Tlim arguments
- read.ctd(): make it understand another SBE format
- add parse.latlon()
- oce.edit(): add argument 'action' 
- add oce.write.table()
- add fill.gap()

0.1-75
- add add.column()
- add undrift.time()
- add tdr.patm()
- make read.tdr() gather serial no. info; show this on plot.tdr()