@@ -1,6 +1,6 @@
 Package: oce
 Version: 0.1-77
-Date: 2009-08-20
+Date: 2009-08-22
 Title: Analysis of Oceanographic data
 Author: Dan Kelley <Dan.Kelley@Dal.Ca>
 Maintainer: Dan Kelley <Dan.Kelley@Dal.Ca>
