@@ -40,6 +40,7 @@ export(
        make.section,
        matlab2POSIXt,
        match.bytes,
+       matrix.smooth,
        oce.axis.POSIXct,
        oce.as.POSIXlt,
        oce.colors.gebco,
