@@ -1,4 +1,5 @@
 0.1-77
+- add matrix.smooth()
 - improve labels for oce.axis.POSIXct()
 - add debug=getOption("oce.debug") as an argument some functions
 - plot.profile(): add argument ytype; change 'type' to 'xtype'
